fix header overlap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 /* ======================== Promo Product Header Section ======================== */
-.header {
+.page_header {
   position: relative;
   z-index: 2;
 }
